--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#Sobre Mi">About</a>
+                <a href="#about">Sobre Mi</a>
             </li>
             <li>
-                <a href="#Experiencia">Experience</a>
+                <a href="#experience">Experiencia</a>
             </li>
             <li>
-                <a href="#Educacion">Education</a>
+                <a href="#education">Educacion</a>
             </li>
             <li>
-                <a href="#Projectos">Projects</a>
+                <a href="#projects">Projectos</a>
             </li>
             <li>
-                <a href="#Habilidades">Skills</a>
+                <a href="#skills">Habilidades</a>
             </li>
             <li>
-		<a href="#Contacto">Contact</a>
+		<a href="#contact">Contacto</a>
             </li>
         </ul>
     </header>
