--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-                <a href="#about">Sobre Mi</a>
+                <a href="#about">Sobre mí</a>
             </li>
             <li>
                 <a href="#experience">Experiencia</a>
             </li>
             <li>
-                <a href="#education">Educacion</a>
+                <a href="#education">Educación</a>
             </li>
             <li>
                 <a href="#projects">Projectos</a>
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">Sobre mí</h2>
                 </div>
                 <div class="col-md-8">
                     <p>
@@ -84,7 +84,7 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Experiencia</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
@@ -114,7 +114,7 @@
     <!-- End #experience -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
+        <h2 class="heading">Educación</h2>
         <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
@@ -146,7 +146,7 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Proyectos</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
@@ -186,7 +186,7 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Habilidades</h2>
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
@@ -219,12 +219,12 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Ponte en contacto</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
+            <form method="POST" action="https://formspree.io/f/myyvyppb">
+                <input type="hidden" name="_subject" value="Solicitud de contacto desde el sitio web personal" />
+                <input type="email" name="_replyto" placeholder="Su correo electrónico" required>
+                <textarea name="message" placeholder="Su mensaje" required></textarea>
                 <button type="submit">Send</button>
             </form>
         </div>
@@ -237,7 +237,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> Jaime A. Dalton
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,22 +248,16 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/JaimeADalton" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                            <a href="https://stackoverflow.com/users/8967394/jaime-dalton" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/jaimeadalton/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
