--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                 <input type="hidden" name="_subject" value="Solicitud de contacto desde el sitio web personal" />
                 <input type="email" name="_replyto" placeholder="Su correo electrónico" required>
                 <textarea name="message" placeholder="Su mensaje" required></textarea>
-<div class="g-recaptcha" data-sitekey="6LcaDOEcAAAAAMMMjj-8-BQorfN6X5DJIScfRuFz"></div>
-<button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit'data-action='submit'>Submit</button>
+<div class="g-recaptcha" data-sitekey="6Lf8FnQhAAAAADBrN_sIKTkwfPJ0CKCCmZHD864I"></div>
+<button class="g-recaptcha" data-sitekey="6Lf8FnQhAAAAADBrN_sIKTkwfPJ0CKCCmZHD864I" data-callback='onSubmit'data-action='submit'>Submit</button>
             </form>
         </div>
         <!-- End #contact-form -->
