--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <input type="email" name="_replyto" placeholder="Su correo electrónico" required>
                 <textarea name="message" placeholder="Su mensaje" required></textarea>
 <div class="g-recaptcha" data-sitekey="6Lf8FnQhAAAAADBrN_sIKTkwfPJ0CKCCmZHD864I"></div>
-<button class="g-recaptcha" data-sitekey="6Lf8FnQhAAAAADBrN_sIKTkwfPJ0CKCCmZHD864I" data-callback='onSubmit'data-action='submit'>Submit</button>
+<button class="g-recaptcha" data-sitekey="6Lf8FnQhAAAAADBrN_sIKTkwfPJ0CKCCmZHD864I" data-callback='onSubmit'data-action='submit'>Enviar</button>
             </form>
         </div>
         <!-- End #contact-form -->
